# Merlin

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  CustomVocabMaker.cpp  CustomVocabMaker.h  Dockerfile  Helper.cpp  Helper.h  IOExample.cpp  IOExample.h  LICENSE  LevenshteinAutomatonCreator.cpp  LevenshteinAutomatonCreator.h  NonTerminal.cpp  NonTerminal.h  Readme.md  Solver.cpp  Solver.h  SyGuSFileTask.cpp  SyGuSFileTask.h  Sygus.g4  VocabFactory.cpp  VocabFactory.h  VocabMaker.cpp  VocabMaker.h  example.cpp  main.cpp
BottomUpDeduction/: AndBottomUpDeduction.cpp  AndBottomUpDeduction.h  BottomUpDeduction.h  BottomUpDeductionBV.h  BottomUpDeductionString.h  ConcatBottomUpDeduction.cpp  ConcatBottomUpDeduction.h  MulBottomUpDeduction.cpp  MulBottomUpDeduction.h  OrBottomUpDeduction.cpp  OrBottomUpDeduction.h  ReplBottomUpDeduction.cpp  ReplBottomUpDeduction.h  SubstrBottomUpDeduction.cpp  SubstrBottomUpDeduction.h  XorAddBottomUpDeduction.cpp  XorAddBottomUpDeduction.h
SMTProcesses/: CVC5SMTProcess.cpp  CVC5SMTProcess.h  SMTProcess.cpp  SMTProcess.h  Z3SMTProcess.cpp  Z3SMTProcess.h
Tests/: BinaryOpNodesTests.cpp  BlazeSemanticsTests.cpp  CMakeLists.txt  HelperTests.cpp  TernaryOpNodeTests.cpp  UnaryOpNodesTests.cpp
antlr_cmake/: ExternalAntlr4Cpp.cmake
ast/: ASTNode.cpp  ASTNode.h  BinaryOpNode.cpp  BinaryOpNode.h  LiteralNode.cpp  LiteralNode.h  QuadraryOpNode.cpp  QuadraryOpNode.h  TernaryOpNode.cpp  TernaryOpNode.h  UnaryOpNode.cpp  UnaryOpNode.h  VariableNode.cpp  VariableNode.h
ast/BinaryOpNodes/: BVAdd.cpp  BVAdd.h  BVAnd.cpp  BVAnd.h  BVEquals.cpp  BVEquals.h  BVMul.cpp  BVMul.h  BVOr.cpp  BVOr.h  BVSDiv.cpp  BVSDiv.h  BVSRem.cpp  BVSRem.h  BVShiftLeft.cpp  BVShiftLeft.h  BVShrArithmetic.cpp  BVShrArithmetic.h  BVShrLogical.cpp  BVShrLogical.h  BVSle.cpp  BVSle.h  BVSlt.cpp  BVSlt.h  BVSub.cpp  BVSub.h  BVUDiv.cpp  BVUDiv.h  BVURem.cpp  BVURem.h  BVUgt.cpp  BVUgt.h  BVUle.cpp  BVUle.h  BVUlt.cpp  BVUlt.h  BVXor.cpp  BVXor.h  BoolEquals.cpp  BoolEquals.h  (+26 more)
ast/Blaze/: Concat.cpp  Concat.h  ConstPos.cpp  ConstPos.h  ConstStr.cpp  ConstStr.h  Pos.cpp  Pos.h  Str.cpp  Str.h  Substr.cpp  Substr.h
ast/LiteralNodes/: BVLiteral.cpp  BVLiteral.h  BoolLiteral.cpp  BoolLiteral.h  IntLiteral.cpp  IntLiteral.h  StringLiteral.cpp  StringLiteral.h
ast/TernaryOpNodes/: BVITE.cpp  BVITE.h  IndexOf.cpp  IndexOf.h  IntITE.cpp  IntITE.h  StringITE.cpp  StringITE.h  StringReplace.cpp  StringReplace.h  Substring.cpp  Substring.h
ast/UnaryOpNodes/: BVNeg.cpp  BVNeg.h  BVNot.cpp  BVNot.h  BVRedor.cpp  BVRedor.h  IntToString.cpp  IntToString.h  LNot.cpp  LNot.h  StringLength.cpp  StringLength.h  StringToInt.cpp  StringToInt.h
ast/VariableNodes/: BVVariable.cpp  BVVariable.h  BoolVariable.cpp  BoolVariable.h  IntVariable.cpp  IntVariable.h  StringVariable.cpp  StringVariable.h
benchmarks/blaze/: bikes-long-repeat.sl  bikes-long.sl  bikes.sl  bikes_small.sl  dr-name-long-repeat.sl  dr-name-long.sl  dr-name.sl  dr-name_small.sl  firstname-long-repeat.sl  firstname-long.sl  firstname.sl  initials-long-repeat.sl  initials-long.sl  initials.sl  lastname-long-repeat.sl  lastname-long.sl  lastname_small.sl  name-combine-2-long-repeat.sl  name-combine-2-long.sl  name-combine-2.sl  name-combine-3-long-repeat.sl  name-combine-3-long.sl  name-combine-3_short.sl  name-combine-4-long-repeat.sl  name-combine-4-long.sl  name-combine-4.sl  name-combine-4_short.sl  name-combine-long-repeat.sl  name-combine-long.sl  name-combine.sl  name-combine_short.sl  phone-1-long-repeat.sl  phone-1-long.sl  phone-1.sl  phone-10-long-repeat.sl  phone-10-long.sl  phone-10.sl  phone-10_short.sl  phone-1_short.sl  phone-2-long-repeat.sl  (+55 more)
benchmarks/duet_string_no_ite_string/: 11440431.sl  11604909.sl  19558979.sl  2171308.sl  25239569.sl  28627624_1.sl  30732554.sl  31753108.sl  33619752.sl  34801680.sl  35016216.sl  35744094.sl  36462127.sl  37534494.sl  38664547.sl  38871714.sl  39060015.sl  41503046.sl  43120683.sl  44789427.sl  add-a-line-break-with-a-formula.sl  bikes-long-repeat.sl  bikes-long.sl  bikes.sl  bikes_small.sl  change-negative-numbers-to-positive.sl  clean-and-reformat-telephone-numbers.sl  convert-numbers-to-text.sl  create-email-address-from-name.sl  create-email-address-with-name-and-domain.sl  exceljet1.sl  extract-nth-word-from-text-string.sl  firstname-long-repeat.sl  firstname-long.sl  firstname.sl  get-domain-from-email-address_2.sl  get-domain-name-from-url.sl  get-first-name-from-name-with-comma.sl  get-first-name-from-name.sl  get-first-word.sl  (+99 more)
benchmarks/example/: example.sl  example_all.sl  example_learning.sl
enumeration/: Enumerator.cpp  Enumerator.h  OEValuesManager.cpp  OEValuesManager.h  SizeBasedChildrenIterator.cpp  SizeBasedChildrenIterator.h  SizeBasedCombinedBottomUp.cpp  SizeBasedCombinedBottomUp.h  SizeBasedCombinedBottomUpStrings.cpp  SizeBasedCombinedBottomUpStrings.h  SizeBasedEnumerationConcatUnderApprox.cpp  SizeBasedEnumerationConcatUnderApprox.h  SizeBasedEnumerationReplaceUnderApprox.cpp  SizeBasedEnumerationReplaceUnderApprox.h  SizeBasedEnumerationSubstrUnderApprox.cpp  SizeBasedEnumerationSubstrUnderApprox.h  SizeBasedEnumerationXorAddHDUnderApprox.cpp  SizeBasedEnumerationXorAddHDUnderApprox.h  SizeBasedEnumerator.cpp  SizeBasedEnumerator.h  SizeBasedEnumeratorAndUnderApprox.cpp  SizeBasedEnumeratorAndUnderApprox.h  SizeBasedEnumeratorBottomUpDeductionUnderApprox.cpp  SizeBasedEnumeratorBottomUpDeductionUnderApprox.h  SizeBasedEnumeratorHDUnderApprox.cpp  SizeBasedEnumeratorHDUnderApprox.h  SizeBasedEnumeratorMulUnderApprox.cpp  SizeBasedEnumeratorMulUnderApprox.h  SizeBasedEnumeratorOrUnderApprox.cpp  SizeBasedEnumeratorOrUnderApprox.h  SizeBasedEnumeratorXorAdd.cpp  SizeBasedEnumeratorXorAdd.h  SizeBasedPortfolio.cpp  SizeBasedPortfolio.h  SizePortfolioBV.cpp  SizePortfolioBV.h  SizePortfolioString.cpp  SizePortfolioString.h  SizeVectorIterator.cpp  SizeVectorIterator.h
